<?xml version="1.0" encoding="UTF-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout tools:context=".Activities.MainActivity"
    android:id="@+id/startPage"
    android:background="@color/color1"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toTopOf="@id/haveAccount"
        android:gravity="center_horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="100dp"
        android:textColor="@color/textColor"
        android:textSize="50dp"
        android:text="@string/app_name"/>

    <Button
        android:id="@+id/haveAccount"
        android:background="@drawable/start_button_background"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="220dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/textColor"
        android:textSize="20dp"
        android:text="@string/haveAccount"
        android:onClick="haveAccount"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/notHaveAccount"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/textColor"
        android:textSize="15dp"
        android:text="@string/notHaveAccount"
        app:layout_constraintTop_toBottomOf="@id/haveAccount"/>

    <Button
        android:id="@+id/register"
        android:background="@drawable/start_button_background"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/textColor"
        android:textSize="20dp"
        android:text="@string/register"
        android:onClick="register"
        app:layout_constraintTop_toBottomOf="@id/notHaveAccount"/>

</androidx.constraintlayout.widget.ConstraintLayout>