<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="15dp"
    android:background="@drawable/item_on_list_background">

    <TextView
        android:id="@+id/confirmationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:textSize="20dp"
        android:textColor="@color/textColor"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/goTest"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/yesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/start_button_background"
            android:textSize="20dp"
            android:padding="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/textColor"
            android:text="@string/yes"
            />



        <Button
            android:id="@+id/noButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/start_button_background"
            android:textSize="20dp"
            android:padding="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/textColor"
            android:text="@string/no"
            />

    </LinearLayout>

</LinearLayout>